# lang-graph-customer-service

./: .gitignore  README.md  pyproject.toml
customer_support/: graph.py  main.py
customer_support/agents/: agent_abstract.py
customer_support/agents/car_booking/: agent.py  memory.py  tools.py
customer_support/agents/excursion_booking/: agent.py  memory.py  tools.py
customer_support/agents/flight_booking/: agent.py  memory.py  tools.py
customer_support/agents/hotel_booking/: agent.py  memory.py  tools.py
customer_support/agents/primary_assistant/: agent.py  knowledge.py  memory.py  tools.py
customer_support/config/: config.py
customer_support/utils/: complete_or_escalate.py  llm_providers.py  state.py  utils.py
